force-app/main/default/objects/Conversation__c/Conversation__c.object-meta.xml
<CustomObject>
    <label>Conversation</label>
    <pluralLabel>Conversations</pluralLabel>
    <nameField>
        <label>Conversation Number</label>
        <displayFormat>CV-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Ingested email thread, phone call, meeting, or transcript source.</description>
</CustomObject>