force-app/main/default/objects/Conversation__c/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <label>Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Phone_Call</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>