force-app/main/default/objects/Conversation__c/fields/Parent_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Type__c</fullName>
    <label>Parent Object Type</label>
    <type>Text</type>
    <length>80</length>
</CustomField>