force-app/main/default/objects/Conversation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ingested</fullName>
                <default>true</default>
                <label>Ingested</label>
            </value>
            <value>
                <fullName>Extracting</fullName>
            </value>
            <value>
                <fullName>Extracted</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>